--- a/config
+++ b/config
@@ -2,281 +2,181 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-# Mod keys - Use xmodmap -help
-# Mod1 for Alt key or Mod4 for Windows Key
-# set $mod Mod4
-# shift       Shift_L (0x32),  Shift_R (0x3e)
-# lock        Caps_Lock (0x42)
-# control     Control_L (0x25),  Control_R (0x69)
-# mod1        Alt_L (0x40),  Alt_R (0x6c),  Meta_L (0xcd)
-# mod2        Num_Lock (0x4d)
-# mod3      
-# mod4        Super_L (0x85),  Super_R (0x86),  Super_L (0xce),  Hyper_L (0xcf)
-# mod5        ISO_Level3_Shift (0x5c),  Mode_switch (0xcb)
-
-# set $caps Lock
-set $mod Mod4
-set $alt Mod1
-set $coloract "#fb4934"
-set $colorin "#458588"
-set $color0 "#c8c8c8"
-set $color2 "#81a2b4"
-set $color8 "#afafaf"
-set $color10 "#3f7998"
-set $color15 "#010101"
+######## VARIABLES ########
+set $mod3 Mod3
+set $mod4 Mod4
 set $terminal "st"
-# set_from_resource $color0 i3wm.color0 "#c8c8c8"
-# set_from_resource $color1 i3wm.color1 "#866eaa"
-# set_from_resource $color2 i3wm.color2 "#83a3b5"
-# set_from_resource $color3 i3wm.color3 "#beb8b2"
-# set_from_resource $color4 i3wm.color4 "#1668aa"
-# set_from_resource $color5 i3wm.color5 "#ab6f95"
-# set_from_resource $color6 i3wm.color6 "#4982ac"
-# set_from_resource $color7 i3wm.color7 "#252423"
-# set_from_resource $color8 i3wm.color8 "#afafaf"
-# set_from_resource $color9 i3wm.color9 "#58348f"
-# set_from_resource $color10 i3wm.color10 "#407999"
-# set_from_resource $color11 i3wm.color11 "#a4805c"
-# set_from_resource $color12 i3wm.color12 "#014a85"
-# set_from_resource $color13 i3wm.color13 "#90356e"
-# set_from_resource $color14 i3wm.color14 "#1e5e8d"
-# set_from_resource $color15 i3wm.color15 "#010101"
-
-set $volup XF86AudioRaiseVolume
-set $voldown XF86AudioLowerVolume
-set $mute XF86AudioMute
-set $playnext XF86AudioNext
-set $playprev XF86AudioPrev
-set $play XF86AudioPlay
-set $stop XF86AudioStop
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Myosevka 10
+font pango:monospace 8
+
+# Gaps
 gaps outer 10
 gaps inner 5
 default_border pixel 0
 
-######### COLORS ##########
-#
-# class                 border    backgr    text    indicator child_border
-client.focused          $coloract $coloract $color15 $color10  $coloract
-client.focused_inactive $coloract $coloract $color15 $color10  $colorin
-client.unfocused        $colorin  $colorin  $color15 $color10  $colorin
-client.urgent           $color2   $color2   $color15 $color2 $color2
-client.placeholder      $color0   $color8   $color15 $color0 $color8
-client.background       $color0
+# This font is widely installed, provides lots of unicode glyphs, right-to-left
+# text rendering and scalability on retina/hidpi displays (thanks to pango).
+#font pango:DejaVu Sans Mono 8
 
+# The combination of xss-lock, nm-applet and pactl is a popular choice, so
+# they are included here as an example. Modify as you see fit.
 
-###### KEYBINDINGS #######
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-floating_modifier $mod
+# NetworkManager is the most popular way to manage wireless networks on Linux,
+# and nm-applet is a desktop environment-independent system tray GUI for it.
+exec --no-startup-id nm-applet
+
+# Use pactl to adjust volume in PulseAudio.
+#set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+# kill apps
+bindsym $mod3+z exec kill
+
+# Use Mouse+$mod3 to drag floating windows to their wanted position
+floating_modifier $mod3
+
+# start dmenu (a program launcher)
+bindsym $mod3+d exec dmenu_run
+# There also is the (new) i3-dmenu-desktop which only displays applications
+# shipping a .desktop file. It is a wrapper around dmenu, so you need that
+# installed.
+# bindsym $mod3+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $mod3+h focus left
+bindsym $mod3+j focus down
+bindsym $mod3+k focus up
+bindsym $mod3+l focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod3+Shift+h move left
+bindsym $mod3+Shift+j move down
+bindsym $mod3+Shift+k move up
+bindsym $mod3+Shift+l move right
 
-# split in horizontal and vertical orientation
-bindsym $mod+s split v
-bindsym $mod+v split h
+# split in horizontal orientation
+#bindsym $mod3+h split h
+
+# split in vertical orientation
+#bindsym $mod3+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+c fullscreen toggle
+bindsym $mod3+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+Shift+t layout tabbed
-bindsym $mod+Shift+s layout stacked
-bindsym $mod+Shift+e layout toggle split
+#bindsym $mod3+s layout stacking
+#bindsym $mod3+w layout tabbed
+#bindsym $mod3+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+f floating toggle
-#bindsym $mod+o sticky toggle
+bindsym $mod3+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-#bindsym $mod+space focus mode_toggle
+bindsym $mod3+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+p focus parent
+#bindsym $mod3+a focus parent
 
-###### EXECUTE PROGRAMS ######
+# focus the child container
+#bindsym $mod3+d focus child
 
-bindsym $mod+f       exec nautilus
-bindsym $mod+w       exec firefox
-# bindsym $mod+c       exec code
-bindsym $mod+Return  exec st -e tmux
-bindsym $mod+t       exec st
-bindsym $mod+q       kill
-#bindsym $mod+l      exec i3lock -i ~/.wallpaper.png
+# applications
+bindsym $mod3+n			exec nautilus
+bindsym $mod3+w			exec firefox
+#bindsym $mod3+c			exec code
+bindsym $mod3+Return		exec --no-startup-id st
+bindsym $mod3+Shift+Return	exec i3-sensible-terminal
+bindsym $mod3+t			exec --no-startup-id st
+bindsym $mod3+Shift+t		exec i3-sensible-terminal
+#bindsym $mod3+l			exec i3lock -i ~/.wallpaper.png
 
-bindsym $mod+d       exec rofi -l 20 -width 90 -location 0 -show drun -sidebar-mode -columns 3 -drun-icon-theme "/home/efex/.icons/default/index.theme" -show-icons -bw 4 -font "Myosevka 16"
-
-bindsym --release Print exec scrot 'scrot_%a-%d%b%y_%H.%M.png' -e 'eog ~/$f'
-bindsym --release Shift+Print exec scrot -s
-
-set $app_launcher Launch: [f]iles [w]eb [c]ode [g]web [t]erm n[v]im ffx-[d]ev
-bindsym $mod+a mode "$app_launcher"
-
-mode "$app_launcher" {
-    bindsym f exec nautilus
-    bindsym w exec firefox
-    bindsym c exec code
-    bindsym g exec google-chrome
-    bindsym t exec $terminal
-    bindsym d exec firefox-developer
-
-    bindsym Escape  mode "default"
-    bindsym Return  mode "default"
-    bindsym $mod+a  mode "default"
-    bindsym a       mode "default"
-}
-
-bindsym $volup exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym $voldown exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym $mute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod3+1 workspace number $ws1
+bindsym $mod3+2 workspace number $ws2
+bindsym $mod3+3 workspace number $ws3
+bindsym $mod3+4 workspace number $ws4
+bindsym $mod3+5 workspace number $ws5
+bindsym $mod3+6 workspace number $ws6
+bindsym $mod3+7 workspace number $ws7
+bindsym $mod3+8 workspace number $ws8
+bindsym $mod3+9 workspace number $ws9
+bindsym $mod3+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod3+Shift+1 move container to workspace number $ws1
+bindsym $mod3+Shift+2 move container to workspace number $ws2
+bindsym $mod3+Shift+3 move container to workspace number $ws3
+bindsym $mod3+Shift+4 move container to workspace number $ws4
+bindsym $mod3+Shift+5 move container to workspace number $ws5
+bindsym $mod3+Shift+6 move container to workspace number $ws6
+bindsym $mod3+Shift+7 move container to workspace number $ws7
+bindsym $mod3+Shift+8 move container to workspace number $ws8
+bindsym $mod3+Shift+9 move container to workspace number $ws9
+bindsym $mod3+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $mod3+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $mod3+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+x exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod3+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+# resize window (you can also use the mouse for that)
 mode "resize" {
-        # resize windows
-        bindsym l resize shrink width 30 px or 10 ppt
-        bindsym j resize grow height 30 px or 10 ppt
-        bindsym k resize shrink height 30 px or 10 ppt
-        bindsym h resize grow width 30 px or 10 ppt
+        # These bindings trigger as soon as you enter the resize mode
 
-        # resize gaps
-        bindsym minus       gaps outer current plus 10
-        bindsym plus        gaps outer current minus 10
-        bindsym Shift+minus gaps inner current plus 10
-        bindsym Shift+plus  gaps inner current minus 10
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym semicolon resize grow width 10 px or 10 ppt
 
-        # move windows
-        bindsym Shift+l move right 30
-        bindsym Shift+j move down 30
-        bindsym Shift+k move up 30
-        bindsym Shift+h move left 30
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
 
+        # back to normal: Enter or Escape or $mod3+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-        bindsym r      mode "default"
-        bindsym d      mode "default"
+        bindsym $mod3+r mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod3+r mode "resize"
 
-mode "display" {
-
-        # toggle thinkpad modes
-        # bindsym s exec dock-single
-        # bindsym d exec dock-dual
-        # bindsym t exec thinkpad
-
-        # toggle compton modes
-        # bindsym f exec "killall compton; compton -b -inactive-dim 0.2"
-        # bindsym n exec "killall compton; compton -b"
-
-        bindsym h move workspace to output left
-        bindsym l move workspace to output right
-
-        # switch to workspace
-        bindsym 1 workspace 1
-        bindsym 2 workspace 2
-        bindsym 3 workspace 3
-        bindsym 4 workspace 4
-        bindsym 5 workspace 5
-        bindsym 6 workspace 6
-        bindsym 7 workspace 7
-        bindsym 8 workspace 8
-        bindsym 9 workspace 9
-        bindsym 0 workspace 10
-
-        # move focused container to workspace
-        bindsym Shift+1 move container to workspace 1
-        bindsym Shift+2 move container to workspace 2
-        bindsym Shift+3 move container to workspace 3
-        bindsym Shift+4 move container to workspace 4
-        bindsym Shift+5 move container to workspace 5
-        bindsym Shift+6 move container to workspace 6
-        bindsym Shift+7 move container to workspace 7
-        bindsym Shift+8 move container to workspace 8
-        bindsym Shift+9 move container to workspace 9
-        bindsym Shift+0 move container to workspace 10
-
-        bindsym Return        mode "default"
-        bindsym Escape        mode "default"
-        bindsym $mod+Shift+d  mode "default"
-        bindsym $mod+r        mode "default"
-        bindsym d             mode "default"
-        bindsym r             mode "default"
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+bar {
+        # status_command i3status
 }
 
-bindsym $mod+Shift+d mode "display"
-
-
-##### WINDOWS ######
-
-for_window [class = "Wpg"] floating enable
-
-##### WORKSPACES ######
-
-# workspace "1: dev" output DisplayPort-0
-# workspace "2: ref" output DisplayPort-1
-# workspace "3: www" output HDMI-A-0
-# workspace "4: dir" output HDMI-A-0
-# workspace "5: zsh" output DisplayPort-1
-# workspace "6: sys" output HDMI-A-0
-
-###### STARTUP ######
-
-# exec --no-startup-id i3-msg "exec code; exec $terminal; exec firefox; exec nautilus; exec $terminal; exec gnome-system-monitor"
+#### STARTUP ####
 
 exec --no-startup-id xrandr --output HDMI-A-0 --auto --left-of DisplayPort-0
-# exec --no-startup-id "xsettingsd &"
-# exec --no-startup-id "compton -b --config /home/efex/.config/compton/compton.conf"
-exec_always --no-startup-id ~/.config/wpg/wp_init.sh
-exec_always --no-startup-id feh --no-fehbg --bg-fill /home/efex/.config/wpg/wallpapers/wall502.png &
-exec_always --no-startup-id /home/efex/.config/polybar/launch.sh &
-exec --no-startup-id rescuetime &
-exec --no-startup-id fluxgui &
 
-exec_always --no-startup-id pactl set-default-sink alsa_output.pci-0000_0a_00.3.analog-stereo
-exec_always --no-startup-id pactl set-default-source alsa_input.usb-Logitech_Logitech_G430_Gaming_Headset-00.mono-fallback
-exec_always --no-startup-id pulseaudio -k
-exec_always --no-startup-id pulseaudio start
