Fixing repo issues

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,152 @@
+# ==== Key Bindings ====
+
+# set global prefix to Ctrl+Space
+unbind C-b
+set -g prefix C-Space
+
+# enable easy reloading of .tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf!"
+
+# easy window splitting
+
+# future proofing these keys
+unbind v
+unbind h
+
+# undo current split keys
+unbind % # vert split
+unbind '"' # horiz split
+
+# set easier split keys
+# remember: split type is direction of the cut, not stack
+bind v split-window -h -c "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
+
+# easier pane navigation with nvim awareness
+bind -n C-H select-pane -L
+bind -n C-J select-pane -D
+bind -n C-K select-pane -U
+bind -n C-L select-pane -R
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
+# easier window management
+unbind n # was: move to next window
+unbind w # was: change current window interactively
+
+bind n command-prompt "rename-window '%%'"
+bind w new-window -c "#{pane_current_path}"
+
+# use Alt+j/k to move to prev/next windows
+bind -n M-j previous-window
+bind -n M-k next-window
+
+# set up copy mode to be vim style
+unbind -T copy-mode-vi Space; # default begin-selection
+unbind -T copy-mode-vi Enter; # default copy-selection
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
+
+# ==== Settings ====
+
+# fix vim mode switch delay
+set -s escape-time 0
+
+# enable mouse
 set -g mouse on
-set -g history-limit 10000
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-# source-file ~/.tmux.conf \; display "Reloaded!"
-# new-session -d -s session1
-# new-window -n vim
-# attach-session -d -t session1
-# select-window -t zsh
+
+# set window base to 1
+set -g base-index 1
+
+# ensure default terminal is 256color friendly
+set -g default-terminal "tmux-256color"
+
+# increase scrollback buffer size
+set -g history-limit 50000
+
+# display tmux messages for 10 seconds
+set -g display-time 10000
+
+# refresh status-left and status-right more often
+set -g status-interval 5
+
+# easy next/prev window switching
+# bind C-p previous-window
+# bind C-n next-window
+
+# "adaptable" key bindings that build upon your prefix value
+# bind C-Space send-prefix
+# bind Space last-window
+
+set-window-option -g pane-base-index 1
+set-window-option -g mode-keys vi
+
+# enable mouse scrolling
+# bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+# bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+# bind -t vi-copy    WheelUpPane   page-up
+# bind -t vi-copy    WheelDownPane page-down
+
+## COLORSCHEME: gruvbox dark
+set-option -g status "on"
+
+# default statusbar color
+set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+
+# default window title colors
+set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+
+# default window with an activity alert
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+
+# active window title colors
+set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+
+# pane border
+set-option -g pane-active-border-style fg=colour250 #fg2
+set-option -g pane-border-style fg=colour237 #bg1
+
+# message infos
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+
+# writing commands inactive
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+
+# pane number display
+set-option -g display-panes-active-colour colour250 #fg2
+set-option -g display-panes-colour colour237 #bg1
+
+# clock
+set-window-option -g clock-mode-colour colour109 #blue
+
+# bell
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+
+## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+set-option -g status-justify "left"
+set-option -g status-left-style none
+set-option -g status-left-length "80"
+set-option -g status-right-style none
+set-option -g status-right-length "80"
+set-window-option -g window-status-separator ""
+
+set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
+set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
+
+set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
+set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Initialize TMUX plugin manager
+run -b '/home/efex/.tmux/plugins/tpm/tpm'
