--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -23,16 +23,16 @@ bind v split-window -h -c "#{pane_current_path}"
 bind h split-window -v -c "#{pane_current_path}"
 
 # easier pane navigation with nvim awareness
-bind -n C-H select-pane -L
-bind -n C-J select-pane -D
-bind -n C-K select-pane -U
-bind -n C-L select-pane -R
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+# bind -n C-H select-pane -L
+# bind -n C-J select-pane -D
+# bind -n C-K select-pane -U
+# bind -n C-L select-pane -R
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#   | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+# bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+# bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # easier window management
 unbind n # was: move to next window
