--- a/ubuntu/.config/kitty/kitty.conf
+++ b/ubuntu/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family Fira Code Regular
-bold_font Fira Code Bold
-italic_font auto
-bold_italic_font auto
+font_family Fura Code Light Nerd Font Complete Mono
+bold_font Fura Code Bold Nerd Font Complete Mono
+italic_font Iosevka Italic Nerd Font Complete Mono
+bold_italic_font Iosevka Bold Italic Nerd Font Complete Mono
 font_size 12
 scrollback_lines 5000
 disable_ligatures never
