--- a/ubuntu/.config/kitty/kitty.conf
+++ b/ubuntu/.config/kitty/kitty.conf
@@ -1,13 +1,18 @@
-font_family Fura Code Light Nerd Font Complete Mono
-bold_font Fura Code Bold Nerd Font Complete Mono
-italic_font Iosevka Italic Nerd Font Complete Mono
-bold_italic_font Iosevka Bold Italic Nerd Font Complete Mono
+font_family         Fura Code Light Nerd Font Complete Mono
+bold_font           Fura Code Bold Nerd Font Complete Mono
+italic_font         Iosevka Italic Nerd Font Complete Mono
+bold_italic_font    Iosevka Bold Italic Nerd Font Complete Mono
+
 font_size 12
+
 scrollback_lines 5000
 disable_ligatures never
+
 cursor #d65d0e
 cursor_text_color #f9f5d7
-# open_url_with firefox
+
+open_url_with firefox
+
 focus_follows_mouse yes
 
 background #f9f5d7
