Editing fonts to fix ligature problems. FiraCode for most fonts now.

--- a/ubuntu/.config/gtk-3.0/settings.ini
+++ b/ubuntu/.config/gtk-3.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-application-prefer-dark-theme=0
 gtk-theme-name=oomox-gruvbox-full-light-hard-clone
 gtk-icon-theme-name=oomox-gruvbox-full-light-hard-clone
-gtk-font-name=Fira Code 11
+gtk-font-name=FiraCode Nerd Font 11
 gtk-cursor-theme-name=DMZ-White
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
