--- a/ubuntu/.config/ranger/rc.conf
+++ b/ubuntu/.config/ranger/rc.conf
@@ -426,12 +426,13 @@ map gC cd /mnt/sdc1/Dropbox/code
 map gh cd ~
 map ge cd /etc
 map gu cd /usr
-map gd cd /dev
+map gd cd /home/efex/dwn
 map gD cd /mnt/sdc1/Dropbox
 map gl cd -r .
 map gL cd -r %f
 map go cd /opt
 map gv cd /var
+map gV cd /dev
 map gm cd /media
 map gi eval fm.cd('/run/media/' + os.getenv('USER'))
 map gM cd /mnt
@@ -455,6 +456,7 @@ map y. yank name_without_extension
 map =  chmod
 
 map cw console rename%space
+map cW chain mark_files all=True toggle=True; console bulkrename
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
