--- a/ubuntu/.config/kitty/kitty.conf
+++ b/ubuntu/.config/kitty/kitty.conf
@@ -1,11 +1,11 @@
-font_family         Fura Code Light Nerd Font Complete Mono
-bold_font           Fura Code Bold Nerd Font Complete Mono
-italic_font         Iosevka Italic Nerd Font Complete Mono
-bold_italic_font    Iosevka Bold Italic Nerd Font Complete Mono
+font_family         FiraCode Nerd Font
+bold_font           FiraCode Nerd Font
+italic_font         FuraCode Nerd Font
+bold_italic_font    FuraCode Nerd Font
 
 font_size 12
 
-scrollback_lines 5000
+scrollback_lines 15000
 disable_ligatures never
 
 cursor #d65d0e
@@ -15,8 +15,26 @@ open_url_with firefox
 
 focus_follows_mouse yes
 
+wheel_scroll_multiplier 5.0
+
+window_border_width 0
+window_padding_width 0
+window_margin_width 0
+
+kitty_mod ctrl+shift
+
+map kitty_mod+.       next_tab
+map kitty_mod+,       previous_tab
+map kitty_mod+n       new_tab
+map kitty_mod+o       close_tab
+map kitty_mod+alt+.   move_tab_forward
+map kitty_mod+alt+,   move_tab_backward
+map kitty_mod+alt+n   set_tab_title
+
 background #f9f5d7
 foreground #3c3836
+selection_foreground #f9f5d7
+selection_background #3c3836
 # bg hard contrast
 color0 #f9f5d7
 # red
@@ -54,3 +72,7 @@ color16 #d65d0e
 # dark orange
 color17 #af3a03
 
+active_tab_foreground #f9f5d7
+active_tab_background #cc241d
+inactive_tab_foreground #3c3836
+inactive_tab_background #d5c4a1
