--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -24,9 +24,9 @@ border-color = ${color.ac}
 padding = 0
 module-margin-left = 1
 module-margin-right = 1
-font-0 = "Fira Code:size=10;3"
+font-0 = "FiraCode Nerd Font:size=10;3"
 font-1 = "icomoon\-feather:size=11;3"
-font-2 = "xos4 Terminus:size=12;2"
+font-2 = "TerminessTTF Nerd Font:size=12;2"
 modules-left = launcher i3 mpv
 modules-center = cpu memory network
 modules-right = sinkswitch xfluxstatus rescuetimestatus dropboxstatus filesystem pulseaudio date sysmenu
