Updating fonts and sizes to configure nerd font glyphs on polybar

--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -1,12 +1,14 @@
 [module/cpu]
 type = internal/cpu
 format = <label>
-format-prefix = 
+format-prefix = 
+; format-prefix = 
 label = " %percentage%%"
 
 [module/date]
 type = internal/date
-time =  %I:%M %p   %m/%d
+; time =  %I:%M %p   %m/%d
+time =  %I:%M %p   %m/%d
 format = <label>
 label = %time%
 
@@ -18,9 +20,10 @@ mount-2 = /mnt/sdc1
 fixed-values = true
 spacing = 0
 format-mounted = <label-mounted>
-format-mounted-prefix = 
+; format-mounted-prefix = 
+format-mounted-prefix = 
 format-unmounted = " X "
-format-unmounted-prefix = 
+format-unmounted-prefix = 
 label-mounted = " %percentage_used%% "
 label-unmounted = %mountpoint%: not mounted
 
@@ -46,7 +49,8 @@ label-separator-foreground = ${color.ac}
 [module/memory]
 type = internal/memory
 format = <label>
-format-prefix = 
+; format-prefix = 
+format-prefix = 
 label = " %mb_used% | %mb_swap_used%"
 
 [module/mpd]
@@ -144,26 +148,39 @@ accumulate-stats = true
 unknown-as-up = true
 format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
-label-connected = "   %downspeed:8%     %upspeed:8%"
-label-disconnected =  "Not Connected"
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+; label-connected = "   %downspeed:8%     %upspeed:8%"
+label-connected = "   %downspeed:8%     %upspeed:8%"
+; label-disconnected =  "Not Connected"
+label-disconnected = 睊 "Not Connected"
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+; ramp-signal-0 = 
+; ramp-signal-1 = 
+; ramp-signal-2 = 
+; ramp-signal-3 = 
+; ramp-signal-4 = 
 
 [module/pulseaudio]
 type = internal/pulseaudio
 use-ui-max = true
 interval = 5
 format-volume = <ramp-volume> <label-volume>
-label-muted =  Muted
+; label-muted =  Muted
+label-muted =  Muted
 label-muted-foreground = #666
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
+; ramp-volume-0 = 
+; ramp-volume-1 = 
+; ramp-volume-2 = 
+; ramp-volume-3 = 
+; ramp-volume-4 = 
 
 [module/temperature]
 type = internal/temperature
