--- a/ubuntu/.config/polybar/user_modules.ini
+++ b/ubuntu/.config/polybar/user_modules.ini
@@ -1,6 +1,7 @@
 [module/launcher]
 type = custom/text
-content = 
+content = 
+; content = 
 content-background = ${color.ac}
 content-foreground = ${color.bg}
 content-padding = 3
@@ -40,7 +41,8 @@ click-middle = /mnt/sdc1/Dropbox/scripts/sinkswitch --middle &
 
 [module/sysmenu]
 type = custom/text
-content = 
+content = 襤
+; content = 
 content-background = ${color.ac}
 content-foreground = ${color.bg}
 content-padding = 3
