--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -24,8 +24,8 @@ border-color = ${color.ac}
 padding = 0
 module-margin-left = 1
 module-margin-right = 1
-font-0 = "FiraCode Nerd Font:size=10;3"
-font-1 = "icomoon\-feather:size=11;3"
+font-0 = "Fira Code:size=10;3"
+font-1 = "FiraCode Nerd Font:size=12;3"
 font-2 = "TerminessTTF Nerd Font:size=12;2"
 modules-left = launcher i3 mpv
 modules-center = cpu memory network
