Changing font size for glyphs to show issue of being cut off

--- a/ubuntu/.config/polybar/user_modules.ini
+++ b/ubuntu/.config/polybar/user_modules.ini
@@ -1,6 +1,6 @@
 [module/launcher]
 type = custom/text
-content = 
+content = 
 ; content = 
 content-background = ${color.ac}
 content-foreground = ${color.bg}
