Adding glyphs to polybar, switching launcher/sysmenu module to script to fix cutoff issue

--- a/ubuntu/.config/polybar/user_modules.ini
+++ b/ubuntu/.config/polybar/user_modules.ini
@@ -1,12 +1,13 @@
 [module/launcher]
-type = custom/text
+type = custom/script
+exec = /mnt/sdc1/Dropbox/scripts/launcher
 content = 
 ; content = 
-content-background = ${color.ac}
-content-foreground = ${color.bg}
-content-padding = 3
-click-left = /mnt/sdc1/Dropbox/scripts/rofidropmenu
-click-right = /mnt/sdc1/Dropbox/scripts/rofioneliner
+; content-background = ${color.ac}
+; content-foreground = ${color.bg}
+; content-padding = 3
+click-left = /mnt/sdc1/Dropbox/scripts/rofidropmenu --drop &
+click-right = /mnt/sdc1/Dropbox/scripts/rofioneliner --oneliner &
 click-middle = /mnt/sdc1/Dropbox/scripts/autoscriptmenu
 
 [module/dropboxstatus]
@@ -40,10 +41,11 @@ click-right = /mnt/sdc1/Dropbox/scripts/sinkswitch --headphones &
 click-middle = /mnt/sdc1/Dropbox/scripts/sinkswitch --middle &
 
 [module/sysmenu]
-type = custom/text
+type = custom/script
+exec = /mnt/sdc1/Dropbox/scripts/sysmenu
 content = 襤
 ; content = 
-content-background = ${color.ac}
-content-foreground = ${color.bg}
-content-padding = 3
-click-left = /mnt/sdc1/Dropbox/scripts/sysmenu
+; content-background = ${color.ac}
+; content-foreground = ${color.bg}
+; content-padding = 3
+click-left = /mnt/sdc1/Dropbox/scripts/sysmenu --menu &
