Adding CPU/GPU temp plus glyphs

--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -15,16 +15,15 @@ label = %time%
 [module/filesystem]
 type = internal/fs
 mount-0 = /
-mount-1 = /mnt/sdb1
-mount-2 = /mnt/sdc1
+mount-1 = /mnt/sdc1
 fixed-values = true
 spacing = 0
 format-mounted = <label-mounted>
 ; format-mounted-prefix = 
-format-mounted-prefix = 
+format-mounted-prefix = " "
 format-unmounted = " X "
 format-unmounted-prefix = 
-label-mounted = " %percentage_used%% "
+label-mounted = " %percentage_used%%"
 label-unmounted = %mountpoint%: not mounted
 
 [module/i3]
@@ -149,7 +148,7 @@ unknown-as-up = true
 format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
 ; label-connected = "   %downspeed:8%     %upspeed:8%"
-label-connected = "   %downspeed:8%     %upspeed:8%"
+label-connected = "   %downspeed:8%   %upspeed:8%"
 ; label-disconnected =  "Not Connected"
 label-disconnected = 睊 "Not Connected"
 ramp-signal-0 = 
@@ -182,7 +181,7 @@ ramp-volume-4 = 
 ; ramp-volume-3 = 
 ; ramp-volume-4 = 
 
-[module/temperature]
+[module/cputemperature]
 type = internal/temperature
 
 ; Seconds to sleep between updates
@@ -200,11 +199,11 @@ thermal-zone = 0
 ; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
 ; to find path to desired file
 ; Default reverts to thermal zone setting
-;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
+hwmon-path = /sys/class/hwmon/hwmon0/temp1_input
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
-warn-temperature = 60
+warn-temperature = 70
 
 ; Whether or not to show units next to the temperature tokens (°C, °F)
 ; Default: true
@@ -224,7 +223,7 @@ format-warn = <ramp> <label-warn>
 ;   %temperature% (deprecated)
 ;   %temperature-c%   (default, temperature in °C)
 ;   %temperature-f%   (temperature in °F)
-label = %temperature-c%
+label = " %temperature-c%"
 
 ; Available tokens:
 ;   %temperature% (deprecated)
@@ -236,13 +235,83 @@ label-warn-foreground = #f00
 ; Requires the <ramp> tag
 ; The icon selection will range from 0 to `warn-temperature`
 ; with the current temperature as index.
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+; ramp-0 = 
+; ramp-1 = 
+; ramp-2 = 
+; ramp-3 = 
+; ramp-4 = 
 ;;ramp-foreground = #55
 
+[module/gputemperature]
+type = internal/temperature
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 0.5
+
+; Thermal zone to use
+; To list all the zone types, run 
+; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
+; Default: 0
+thermal-zone = 0
+
+; Full path of temperature sysfs path
+; Use `sensors` to find preferred temperature source, then run
+; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
+; to find path to desired file
+; Default reverts to thermal zone setting
+hwmon-path = /sys/class/hwmon/hwmon3/temp1_input
+
+; Threshold temperature to display warning label (in degrees celsius)
+; Default: 80
+warn-temperature = 70
+
+; Whether or not to show units next to the temperature tokens (°C, °F)
+; Default: true
+units = true
+
+; Available tags:
+;   <label> (default)
+;   <ramp>
+format = <ramp> <label>
+
+; Available tags:
+;   <label-warn> (default)
+;   <ramp>
+format-warn = <ramp> <label-warn>
+
+; Available tokens:
+;   %temperature% (deprecated)
+;   %temperature-c%   (default, temperature in °C)
+;   %temperature-f%   (temperature in °F)
+label = " %temperature-c%"
+
+; Available tokens:
+;   %temperature% (deprecated)
+;   %temperature-c%   (default, temperature in °C)
+;   %temperature-f%   (temperature in °F)
+label-warn = "%temperature-c%"
+label-warn-foreground = #f00
+
+; Requires the <ramp> tag
+; The icon selection will range from 0 to `warn-temperature`
+; with the current temperature as index.
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+; ramp-0  
+; ramp-1 = 
+; ramp-2 = 
+; ramp-3 = 
+; ramp-4 = 
+;;ramp-foreground = #55
 [module/title]
 type = internal/xwindow
 
