--- a/ubuntu/.config/polybar/user_modules.ini
+++ b/ubuntu/.config/polybar/user_modules.ini
@@ -6,9 +6,9 @@ content = 
 ; content-background = ${color.ac}
 ; content-foreground = ${color.bg}
 ; content-padding = 3
-click-left = /mnt/sdc1/Dropbox/scripts/rofidropmenu --drop &
-click-right = /mnt/sdc1/Dropbox/scripts/rofioneliner --oneliner &
-click-middle = /mnt/sdc1/Dropbox/scripts/autoscriptmenu
+click-left = /mnt/sdc1/Dropbox/scripts/launcher --drop &
+click-right = /mnt/sdc1/Dropbox/scripts/launcher --oneliner &
+click-middle = /mnt/sdc1/Dropbox/scripts/launcher --autoscript &
 
 [module/dropboxstatus]
 type = custom/script
