--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -27,8 +27,8 @@ module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
 font-1 = "FiraCode Nerd Font:size=14;3"
 font-2 = "TerminessTTF Nerd Font:size=12;2"
-modules-left = launcher i3 mpv
-modules-center = cpu memory network
+modules-left = launcher i3 mpd
+modules-center = cpu memory network cputemperature gputemperature
 modules-right = sinkswitch xfluxstatus rescuetimestatus dropboxstatus filesystem pulseaudio date sysmenu
 separator =
 spacing = 0
