--- a/ubuntu/.config/polybar/user_modules.ini
+++ b/ubuntu/.config/polybar/user_modules.ini
@@ -2,10 +2,6 @@
 type = custom/script
 exec = /mnt/sdc1/Dropbox/scripts/launcher
 content = 
-; content = 
-; content-background = ${color.ac}
-; content-foreground = ${color.bg}
-; content-padding = 3
 click-left = /mnt/sdc1/Dropbox/scripts/launcher --drop &
 click-right = /mnt/sdc1/Dropbox/scripts/launcher --oneliner &
 click-middle = /mnt/sdc1/Dropbox/scripts/launcher --autoscript &
@@ -44,8 +40,19 @@ click-middle = /mnt/sdc1/Dropbox/scripts/sinkswitch --middle &
 type = custom/script
 exec = /mnt/sdc1/Dropbox/scripts/sysmenu
 content = 襤
-; content = 
-; content-background = ${color.ac}
-; content-foreground = ${color.bg}
-; content-padding = 3
 click-left = /mnt/sdc1/Dropbox/scripts/sysmenu --menu &
+
+[module/cpustatus]
+type = custom/script
+exec = /mnt/sdc1/Dropbox/scripts/cpustatus
+interval = 0.5
+
+[module/gpustatus]
+type = custom/script
+exec = /mnt/sdc1/Dropbox/scripts/gpustatus
+interval = 0.5
+
+[module/fanstatus]
+type = custom/script
+exec = /mnt/sdc1/Dropbox/scripts/fanstatus
+interval = 0.5
