--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -141,7 +141,7 @@ accumulate-stats = true
 unknown-as-up = true
 format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
-label-connected = "   %downspeed:8%   %upspeed:8%"
+label-connected = "  %downspeed:8%  %upspeed:8%"
 label-disconnected = 睊 "Not Connected"
 ramp-signal-0 = 
 ramp-signal-1 = 
