Cleaning up xflux and rescuetime scripts, adding reboot and killall to rescuetime, adding .rtgoals alias

--- a/ubuntu/.config/polybar/user_modules.ini
+++ b/ubuntu/.config/polybar/user_modules.ini
@@ -19,6 +19,8 @@ type = custom/script
 exec = /mnt/sdc1/Dropbox/scripts/rescuetimestatus
 interval = 1500
 click-left = /mnt/sdc1/Dropbox/scripts/rescuetimestatus --status &
+click-middle = /mnt/sdc1/Dropbox/scripts/rescuetimestatus --reboot &
+click-right = /mnt/sdc1/Dropbox/scripts/rescuetimestatus --off &
 
 [module/xfluxstatus]
 type = custom/script
