--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -6,7 +6,7 @@ label = " %percentage%%"
 
 [module/date]
 type = internal/date
-time =  %I:%M %p   %m/%d
+time =  %I:%M %p    %a %m/%d
 format = <label>
 label = %time%
 
@@ -32,8 +32,10 @@ label-mode-padding = 0
 label-mode-background = #e60053
 label-focused = %index%
 label-focused-foreground = ${color.bg}
-label-focused-background = ${color.fg}
+label-focused-background = ${color.dark-blue}
 label-focused-padding = 2
+label-unfocused = %index%
+label-unfocused-padding = 2
 label-visible = %index%
 label-visible-padding = 2
 label-separator = |
