Minimalized polybar to move towards event driven environment - Removed launcher, sysmenu, i3 modules - Renamed to mandelight

--- a/ubuntu/.config/polybar/config.ini
+++ b/ubuntu/.config/polybar/config.ini
@@ -4,7 +4,7 @@ include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
 
-[bar/adventura]
+[bar/mandelight]
 monitor-strict = false
 override-redirect = false
 bottom = false
@@ -21,15 +21,15 @@ overline-size = 2
 overline-color = ${color.ac}
 border-bottom-size = 5
 border-color = ${color.ac}
-padding = 0
+padding = 1
 module-margin-left = 1
 module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
 font-1 = "FiraCode Nerd Font:size=14;3"
 font-2 = "TerminessTTF Nerd Font:size=12;2"
-modules-left = launcher i3 cpustatus gpustatus fanstatus
+modules-left = cpustatus gpustatus fanstatus
 modules-center = cpu memory network
-modules-right = sinkswitch xfluxstatus rescuetimestatus dropboxstatus filesystem pulseaudio date sysmenu
+modules-right = sinkswitch xfluxstatus rescuetimestatus dropboxstatus filesystem pulseaudio date
 separator =
 spacing = 0
 dim-value = 1.0
