Changed i3 window positions from 2|1|3/5|4|6 to 1|2|3/4|5|6

--- a/ubuntu/.config/polybar/modules.ini
+++ b/ubuntu/.config/polybar/modules.ini
@@ -1,3 +1,22 @@
+[module/i3]
+type = internal/i3
+index-sort = true
+format = <label-state> <label-mode>
+label-mode = %mode%
+label-mode-padding = 0
+label-mode-background = #e60053
+label-focused = %index%
+label-focused-foreground = ${color.bg}
+label-focused-background = ${color.fg}
+label-focused-padding = 2
+label-visible = %index%
+label-visible-padding = 2
+label-unfocused = %index%
+label-unfocused-padding = 2
+label-separator = |
+label-separator-padding = 1
+label-separator-foreground = ${color.ac}
+
 [module/cpu]
 type = internal/cpu
 format = <label>
