--- a/ubuntu/.config/todo/config
+++ b/ubuntu/.config/todo/config
@@ -8,50 +8,72 @@ export TODOTXT_DEFAULT_ACTION=ls
 export TODOTXT_SORT_COMMAND="env LC_COLLATE=C sort -k 2,2 -k 1,1n"
 export TODO_ACTIONS_DIR="/home/efex/.config/todo/.actions.d"
 
-export BLACK='\\033[0;30m'
-export RED='\\033[0;31m'
-export GREEN='\\033[0;32m'
-export BROWN='\\033[0;33m'
-export BLUE='\\033[0;34m'
-export PURPLE='\\033[0;35m'
-export CYAN='\\033[0;36m'
-export LIGHT_GREY='\\033[0;37m'
-export DARK_GREY='\\033[1;30m'
-export LIGHT_RED='\\033[1;31m'
-export LIGHT_GREEN='\\033[1;32m'
-export YELLOW='\\033[1;33m'
-export LIGHT_BLUE='\\033[1;34m'
-export LIGHT_PURPLE='\\033[1;35m'
-export LIGHT_CYAN='\\033[1;36m'
-export WHITE='\\033[1;37m'
-export DEFAULT='\\033[0;37m'
+export BLACK="\\033[30m"
+export RED="\\033[31m"
+export GREEN="\\033[32m"
+export YELLOW="\\033[33m"
+export BLUE="\\033[34m"
+export PURPLE="\\033[35m"
+export CYAN="\\033[36m"
+export GREY="\\033[37m"
+export BLACK_BG="\\033[40m"
+export RED_BG="\\033[41m"
+export GREEN_BG="\\033[42m"
+export YELLOW_BG="\\033[43m"
+export BLUE_BG="\\033[44m"
+export PURPLE_BG="\\033[45m"
+export CYAN_BG="\\033[46m"
+export GREY_BG="\\033[47m"
+export BRIGHT_BLACK="\\033[90m"
+export BRIGHT_RED="\\033[91m"
+export BRIGHT_GREEN="\\033[92m"
+export BRIGHT_YELLOW="\\033[93m"
+export BRIGHT_BLUE="\\033[94m"
+export BRIGHT_PURPLE="\\033[95m"
+export BRIGHT_CYAN="\\033[96m"
+export BRIGHT_GREY="\\033[97m"
+export BRIGHT_BLACK_BG="\\033[100m"
+export BRIGHT_RED_BG="\\033[101m"
+export BRIGHT_GREEN_BG="\\033[102m"
+export BRIGHT_YELLOW_BG="\\033[103m"
+export BRIGHT_BLUE_BG="\\033[104m"
+export BRIGHT_PURPLE_BG="\\033[105m"
+export BRIGHT_CYAN_BG="\\033[106m"
+export BRIGHT_GREY_BG="\\033[107m"
+export NORMAL="\\033[0m"
+export BOLD="\\033[1m"
+export FAINT="\\033[2m"
+export ITALIC="\\033[3m"
+export UNDERLINE="\\033[4m"
+export DOUBLE_UNDERLINE="\\033[21m"
 
-export PRI_A=$LIGHT_RED
-export PRI_B=$YELLOW
-export PRI_C=$LIGHT_BLUE
-export PRI_D=$LIGHT_PURPLE
-export PRI_E=$LIGHT_GREEN
-export PRI_F=$LIGHT_CYAN
-export PRI_G=$RED
-export PRI_H=$BROWN
-export PRI_I=$BLUE
-export PRI_J=$PURPLE
-export PRI_K=$GREEN
-export PRI_L=$CYAN
-export PRI_M=$DEFAULT
-export PRI_N=$LIGHT_RED
-export PRI_O=$YELLOW
-export PRI_P=$LIGHT_BLUE
-export PRI_Q=$LIGHT_PURPLE
-export PRI_R=$LIGHT_GREEN
-export PRI_S=$LIGHT_CYAN
-export PRI_T=$RED
-export PRI_U=$BROWN
-export PRI_V=$BLUE
-export PRI_W=$PURPLE
-export PRI_X=$GREEN
-export PRI_Y=$CYAN
-export PRI_Z=$DEFAULT
+export PRI_A="$BOLD$BLACK$RED_BG"
+export PRI_B="$BOLD$BLACK$GREEN_BG"
+export PRI_C="$BOLD$BLACK$YELLOW_BG"
+export PRI_D="$BOLD$BLACK$BLUE_BG"
+export PRI_E="$BOLD$BLACK$PURPLE_BG"
+export PRI_F="$BOLD$BLACK$CYAN_BG"
+export PRI_G="$BOLD$BLACK$GREY_BG"
+export PRI_H="$BOLD$RED"
+export PRI_I="$BOLD$GREEN"
+export PRI_J="$BOLD$YELLOW"
+export PRI_K="$BOLD$BLUE"
+export PRI_L="$BOLD$PURPLE"
+export PRI_M="$BOLD$CYAN"
+export PRI_N="$BOLD$GREY"
+export PRI_O="$BOLD$BRIGHT_BLACK"
+export PRI_P="$BOLD$BRIGHT_RED"
+export PRI_Q="$BOLD$BRIGHT_GREEN"
+export PRI_R="$BOLD$BRIGHT_YELLOW"
+export PRI_S="$BOLD$BRIGHT_BLUE"
+export PRI_T="$BOLD$BRIGHT_PURPLE"
+export PRI_U="$BOLD$BRIGHT_CYAN"
+export PRI_V="$BOLD$BRIGHT_GREY"
+export PRI_W="$BRIGHT_RED"
+export PRI_X="$BRIGHT_GREEN"
+export PRI_Y="$BRIGHT_YELLOW"
+export PRI_Z="$BRIGHT_BLUE"
 
-export COLOR_PROJECT=$WHITE
-export COLOR_CONTEXT=$DEFAULT
+export COLOR_PROJECT="$FAINT$UNDERLINE$BRIGHT_GREY"
+export COLOR_CONTEXT="$FAINT$ITALIC$BRIGHT_GREY"
+# export TODO_TXT_DUE_KEY="d"
