--- a/ubuntu/.config/todo/config
+++ b/ubuntu/.config/todo/config
@@ -47,33 +47,34 @@ export ITALIC="\\033[3m"
 export UNDERLINE="\\033[4m"
 export DOUBLE_UNDERLINE="\\033[21m"
 
-export PRI_A="$BOLD$BLACK$RED_BG"
-export PRI_B="$BOLD$BLACK$GREEN_BG"
-export PRI_C="$BOLD$BLACK$YELLOW_BG"
-export PRI_D="$BOLD$BLACK$BLUE_BG"
-export PRI_E="$BOLD$BLACK$PURPLE_BG"
-export PRI_F="$BOLD$BLACK$CYAN_BG"
-export PRI_G="$BOLD$BLACK$GREY_BG"
-export PRI_H="$BOLD$RED"
-export PRI_I="$BOLD$GREEN"
-export PRI_J="$BOLD$YELLOW"
-export PRI_K="$BOLD$BLUE"
-export PRI_L="$BOLD$PURPLE"
-export PRI_M="$BOLD$CYAN"
-export PRI_N="$BOLD$GREY"
-export PRI_O="$BOLD$BRIGHT_BLACK"
-export PRI_P="$BOLD$BRIGHT_RED"
-export PRI_Q="$BOLD$BRIGHT_GREEN"
-export PRI_R="$BOLD$BRIGHT_YELLOW"
-export PRI_S="$BOLD$BRIGHT_BLUE"
-export PRI_T="$BOLD$BRIGHT_PURPLE"
-export PRI_U="$BOLD$BRIGHT_CYAN"
-export PRI_V="$BOLD$BRIGHT_GREY"
-export PRI_W="$BRIGHT_RED"
-export PRI_X="$BRIGHT_GREEN"
-export PRI_Y="$BRIGHT_YELLOW"
-export PRI_Z="$BRIGHT_BLUE"
+export PRI_A="$BOLD$RED"
+export PRI_B="$BOLD$GREEN"
+export PRI_C="$BOLD$YELLOW"
+export PRI_D="$BOLD$BLUE"
+export PRI_E="$BOLD$PURPLE"
+export PRI_F="$BOLD$CYAN"
+export PRI_G="$BOLD$GREY"
+export PRI_H="$RED"
+export PRI_I="$GREEN"
+export PRI_J="$YELLOW"
+export PRI_K="$BLUE"
+export PRI_L="$PURPLE"
+export PRI_M="$CYAN"
+export PRI_N="$BOLD$BRIGHT_RED"
+export PRI_O="$BOLD$BRIGHT_GREEN"
+export PRI_P="$BOLD$BRIGHT_YELLOW"
+export PRI_Q="$BOLD$BRIGHT_BLUE"
+export PRI_R="$BOLD$BRIGHT_PURPLE"
+export PRI_S="$BOLD$BRIGHT_CYAN"
+export PRI_T="$BOLD$BRIGHT_GREY"
+export PRI_U="$BRIGHT_RED"
+export PRI_V="$BRIGHT_GREEN"
+export PRI_W="$BRIGHT_YELLOW"
+export PRI_X="$BRIGHT_BLUE"
+export PRI_Y="$BRIGHT_PURPLE"
+export PRI_Z="$BRIGHT_CYAN"
 
 export COLOR_PROJECT="$FAINT$UNDERLINE$BRIGHT_GREY"
 export COLOR_CONTEXT="$FAINT$ITALIC$BRIGHT_GREY"
 # export TODO_TXT_DUE_KEY="d"
+export TODOTXT_GRAPH_THRESHOLD=3
