--- a/ubuntu/.tmux.conf
+++ b/ubuntu/.tmux.conf
@@ -154,5 +154,9 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @contiuum-restore 'on'
+
 # Initialize TMUX plugin manager
 run -b '/home/efex/.tmux/plugins/tpm/tpm'
