--- a/ubuntu/.config/polybar/user_modules.ini
+++ b/ubuntu/.config/polybar/user_modules.ini
@@ -1,46 +1,46 @@
 [module/dropboxstatus]
 type = custom/script
-exec = /mnt/sdc1/Dropbox/scripts/dropboxstatus
+exec = /mnt/sdc1/Dropbox/scripts/dropboxstatus.sh
 interval = 300
-click-left = /mnt/sdc1/Dropbox/scripts/dropboxstatus --status &
-click-right = /mnt/sdc1/Dropbox/scripts/dropboxsyncmenu
-click-middle = /mnt/sdc1/Dropbox/scripts/sysbackup
+click-left = /mnt/sdc1/Dropbox/scripts/dropboxstatus.sh --status &
+click-right = /mnt/sdc1/Dropbox/scripts/dropboxsyncmenu.sh
+click-middle = /mnt/sdc1/Dropbox/scripts/sysbackup.sh
 
 [module/rescuetimestatus]
 type = custom/script
-exec = /mnt/sdc1/Dropbox/scripts/rescuetimestatus
+exec = /mnt/sdc1/Dropbox/scripts/rescuetimestatus.sh
 interval = 1500
-click-left = /mnt/sdc1/Dropbox/scripts/rescuetimestatus --status &
-click-middle = /mnt/sdc1/Dropbox/scripts/rescuetimestatus --reboot &
-click-right = /mnt/sdc1/Dropbox/scripts/rescuetimestatus --off &
+click-left = /mnt/sdc1/Dropbox/scripts/rescuetimestatus.sh --status &
+click-middle = /mnt/sdc1/Dropbox/scripts/rescuetimestatus.sh --reboot &
+click-right = /mnt/sdc1/Dropbox/scripts/rescuetimestatus.sh --off &
 
 [module/xfluxstatus]
 type = custom/script
-exec = /mnt/sdc1/Dropbox/scripts/xfluxstatus
+exec = /mnt/sdc1/Dropbox/scripts/xfluxstatus.sh
 interval = 1500
-click-left = /mnt/sdc1/Dropbox/scripts/xfluxstatus --status &
-click-right = /mnt/sdc1/Dropbox/scripts/xfluxstatus --reboot &
-click-middle = /mnt/sdc1/Dropbox/scripts/xfluxstatus --off &
+click-left = /mnt/sdc1/Dropbox/scripts/xfluxstatus.sh --status &
+click-right = /mnt/sdc1/Dropbox/scripts/xfluxstatus.sh --reboot &
+click-middle = /mnt/sdc1/Dropbox/scripts/xfluxstatus.sh --off &
 
 [module/sinkswitch]
 type = custom/script
-exec = /mnt/sdc1/Dropbox/scripts/sinkswitch
+exec = /mnt/sdc1/Dropbox/scripts/sinkswitch.sh
 interval = 1500
-click-left = /mnt/sdc1/Dropbox/scripts/sinkswitch --speakers &
-click-right = /mnt/sdc1/Dropbox/scripts/sinkswitch --headphones &
-click-middle = /mnt/sdc1/Dropbox/scripts/sinkswitch --middle &
+click-left = /mnt/sdc1/Dropbox/scripts/sinkswitch.sh --speakers &
+click-right = /mnt/sdc1/Dropbox/scripts/sinkswitch.sh --headphones &
+click-middle = /mnt/sdc1/Dropbox/scripts/sinkswitch.sh --middle &
 
 [module/cpustatus]
 type = custom/script
-exec = /mnt/sdc1/Dropbox/scripts/cpustatus
+exec = /mnt/sdc1/Dropbox/scripts/cpustatus.sh
 interval = 0.5
 
 [module/gpustatus]
 type = custom/script
-exec = /mnt/sdc1/Dropbox/scripts/gpustatus
+exec = /mnt/sdc1/Dropbox/scripts/gpustatus.sh
 interval = 0.5
 
 [module/fanstatus]
 type = custom/script
-exec = /mnt/sdc1/Dropbox/scripts/fanstatus
+exec = /mnt/sdc1/Dropbox/scripts/fanstatus.sh
 interval = 0.5
