Polybar simplification and alias changes

--- a/manjaro/.config/polybar/config.ini
+++ b/manjaro/.config/polybar/config.ini
@@ -27,9 +27,9 @@ module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
 font-1 = "icomoon\-feather:size=11;3"
 font-2 = "xos4 Terminus:size=12;2"
-modules-left = launcher i3 mpv
+modules-left = 
 modules-center = cpu memory network
-modules-right = sinkswitch xfluxstatus rescuetimestatus dropboxstatus filesystem pulseaudio date sysmenu
+modules-right = filesystem date
 separator =
 spacing = 0
 dim-value = 1.0
