--- a/manjaro/.config/polybar/modules.ini
+++ b/manjaro/.config/polybar/modules.ini
@@ -13,8 +13,6 @@ label = %time%
 [module/filesystem]
 type = internal/fs
 mount-0 = /
-mount-1 = /mnt/sdb1
-mount-2 = /mnt/sdc1
 fixed-values = true
 spacing = 0
 format-mounted = <label-mounted>
@@ -138,7 +136,7 @@ icon-consume = ✀
 
 [module/network]
 type = internal/network
-interface = wlp7s0
+interface = wlo1
 interval = 1
 accumulate-stats = true
 unknown-as-up = true
